@@ -288,17 +288,15 @@ is $job->info->{state},     'inactive',   'right state';
 is $job->info->{retries},   1,            'job has been retried once';
 $job = $worker->dequeue(0);
 is $job->retries, 1, 'job has been retried once';
-ok !$job->retry, 'job not retried';
-is $job->id, $id, 'right id';
-ok !$job->remove, 'job has not been removed';
-ok $job->fail,  'job failed';
 ok $job->retry, 'job retried';
+is $job->id, $id, 'right id';
 is $job->info->{retries}, 2, 'job has been retried twice';
 $job = $worker->dequeue(0);
 is $job->info->{state}, 'active', 'right state';
 ok $job->finish, 'job finished';
 ok $job->remove, 'job has been removed';
-is $job->info,   undef, 'no information';
+ok !$job->retry, 'job not retried';
+is $job->info, undef, 'no information';
 $id = $minion->enqueue(add => [6, 5]);
 $job = $minion->job($id);
 is $job->info->{state},   'inactive', 'right state';
